--- a/NextflowRunnerClient/Components/Pipeline.razor
+++ b/NextflowRunnerClient/Components/Pipeline.razor
@@ -1,6 +1,7 @@
 ﻿<div class="card">
   <div class="card-header">
     @Pline.PipelineName
+    <a href="/execute/@Pline.PipelineId">Execute</a>
   </div>
   <p>
       @Pline.Description
