--- a/NextflowRunnerClient/Pages/ExecutePipeline.razor
+++ b/NextflowRunnerClient/Pages/ExecutePipeline.razor
@@ -1,12 +1,18 @@
 ﻿@page "/execute/{Id:int}"
+@using NextflowRunnerClient.Components
 <div>
     <h2>Pipeline ID: @Id </h2>
     @if(SUBMITTED)
     {
         <h2>Submited</h2>
     }
-    else
-    {
-        <button class="btn btn-primary" onclick=@(()=>{ExecuteJob();})>Execute</button> 
-    }
+    
+        @foreach (var p in Params)
+        {
+            <PipelineParam ParamValue=@ParamValue[p.PipelineId.ToString()] Param=p/>
+        }    
+
+        <button class="btn btn-primary" onclick=@(()=>{ExecuteJob();})>Execute</button>
+
+    
 </div>
