Resolve bug where param values were not passed to execution endpoint

--- a/NextflowRunnerClient/Components/PipelineParam.razor
+++ b/NextflowRunnerClient/Components/PipelineParam.razor
@@ -1,15 +1,11 @@
 ﻿<div>
-    <EditForm class="col-form-label" Model="@ParamValue">
+    <EditForm class="col-form-label" Model="@Param">
 
         <div class="form-group">
 
             <label class="col-form-label">@Param.ParamName</label>
-            <InputText id="value" @onblur=ValidateParam @onkeypress=ValidateParam @bind-Value="@ParamValue" required />
+            <InputText id="value" @bind-Value="@Param.Value" required />
             <small class="form-text text-muted">@Param.ParamExample</small>
-            @if (!Valid)
-            {
-                <span class="alert-warning">Required</span>
-            }
         </div>
     </EditForm>
 </div>
