--- a/NextflowRunnerClient/Pages/ExecutePipeline.razor
+++ b/NextflowRunnerClient/Pages/ExecutePipeline.razor
@@ -8,7 +8,7 @@
     }
     
     <label class="col-form-label">Run Name</label>
-    <input readonly type="text" class="col-form-label" value=@ExecutionRequest.RunName />
+    <input readonly type="text" class="form-control" value=@ExecutionRequest.RunName />
 
     @foreach (var p in Params)
     {
