--- a/NextflowRunnerClient/Components/Pipeline.razor
+++ b/NextflowRunnerClient/Components/Pipeline.razor
@@ -17,7 +17,7 @@
             <ul class="list-group list-group-flush">
                 @foreach (var run in Pline.PipelineRuns?.OrderByDescending(r => r.RunDateTime)?.Take(3).ToList() ?? new List<PipelineRun>())
                 {
-                    <li class="list-group-item">@run.RunDateTime.ToString("g") - @run.Status</li>
+                    <li class="list-group-item">@ConverToLocalDateTimeString(run.RunDateTime) - @run.Status</li>
                 }
             </ul>
         }
