Fix bad styling

--- a/NextflowRunnerClient/Components/Pipeline.razor
+++ b/NextflowRunnerClient/Components/Pipeline.razor
@@ -15,7 +15,7 @@
         @if (Pline.PipelineRuns != null && Pline.PipelineRuns.Any())
         {
             <ul class="list-group list-group-flush">
-                <li>
+                <li class="list-group-item">
                     <div class="row">
                         <div class="col">Run Name</div>
                         <div class="col">Started On</div>
