--- a/NextflowRunnerClient/Components/PipelineParamFile.razor
+++ b/NextflowRunnerClient/Components/PipelineParamFile.razor
@@ -1,10 +1,11 @@
-﻿
-<EditForm class="col-form-label" Model="@Param">
+﻿<EditForm class="col-form-label" Model="@Param">
 
-    <div class="form-group">                      
+    <div class="form-group">  
+        
+        <label class="col-form-label">Authorization Key</label>         
+        <InputText @bind-Value="@AzKey" required />
 
-        <label class="col-form-label">@Param.ParamName </label>      
-            
+        <label class="col-form-label">@Param.ParamName </label>                  
         @if (!Valid)
         {
             <span class="alert-warning"> Required </span>
@@ -15,7 +16,6 @@
         <p>@status</p>
 
         @((MarkupString)uploadedFileDetails)
-
 
         @if (fileSelected)
         {
