set field to password

--- a/NextflowRunnerClient/Pages/ExecutePipeline.razor
+++ b/NextflowRunnerClient/Pages/ExecutePipeline.razor
@@ -19,7 +19,7 @@
         <div>&nbsp;</div>
         <div class="input-group">
             <label class="col-form-label">Authorization Key: &nbsp; </label>         
-            <InputText @bind-Value="@AzureKey" required />
+            <InputText @bind-Value="@AzureKey" required type=password />
         </div>
     </EditForm>
 
