--- a/NextflowRunnerClient/Shared/NavMenu.razor
+++ b/NextflowRunnerClient/Shared/NavMenu.razor
@@ -20,8 +20,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> New Job
+            <NavLink class="nav-link" href="runs">
+                <span class="oi oi-project" aria-hidden="true"></span>Job Status
             </NavLink>
         </div>
 
