--- a/NextflowRunnerClient/Pages/RunsList.razor
+++ b/NextflowRunnerClient/Pages/RunsList.razor
@@ -1,6 +1,4 @@
 ﻿@using NextflowRunnerClient.Components
 @page "/runs"
-<div>
-Previous Runs
-    <RunListComponent RunList=Runs/>
-</div>
+<h1 class=title"">Previous Runs</h1>
+<RunListComponent RunList=Runs/>
