Add check for if input requires file input

--- a/NextflowRunnerClient/Components/PipelineParamText.razor
+++ b/NextflowRunnerClient/Components/PipelineParamText.razor
@@ -1,15 +1,7 @@
-﻿<div>
-    <EditForm class="col-form-label" Model="@ParamValue">
-
-        <div class="form-group">
-
-            <label class="col-form-label">@Param.ParamName</label>
-            <InputText id="value" @onblur=ValidateParam @onkeypress=ValidateParam @bind-Value="@ParamValue" required />
-            <small class="form-text text-muted">@Param.ParamExample</small>
-            @if (!Valid)
-            {
-                <span class="alert-warning">Required</span>
-            }
-        </div>
-    </EditForm>
-</div>
+﻿<EditForm class="col-form-label" Model="@ViewParam">
+    <div class="form-group">
+        <label class="col-form-label">@ViewParam.ParamName</label>
+        <InputText id="value" @bind-Value="@ViewParam.Value" required />
+        <small class="form-text text-muted">@ViewParam.ParamExample</small>
+    </div>
+</EditForm>
