--- a/NextflowRunnerClient/Pages/RunsList.razor
+++ b/NextflowRunnerClient/Pages/RunsList.razor
@@ -1,4 +1,4 @@
 ﻿@using NextflowRunnerClient.Components
 @page "/runs"
-<h1 class=title"">Previous Runs</h1>
+<h1 class="title">Previous Runs</h1>
 <RunListComponent RunList=Runs/>
