remove status label from Completed

--- a/NextflowRunnerClient/Components/PipelineRun.razor
+++ b/NextflowRunnerClient/Components/PipelineRun.razor
@@ -6,7 +6,7 @@
             @switch (@Run.Status)
             {
                 case "completed":
-                    <span class="oi oi-circle-check">Completed</span>
+                    <span class="oi oi-circle-check"></span>
                     break;
                 case "started":
                     <span class="oi oi-reload"></span>
